--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="register_button_text">Создать</string>
     <string name="login_button_text">Войти</string>
     <string name="login_activity_title">Авторизация пользователя</string>
+    <string name="start_activity_text">SvChat</string>
 </resources>
