--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="blank_fragment_chats">Ваш чат</string>
     <string name="blank_fragment_users">Ваши пользователи</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile">Profile</string>
 </resources>
